[tool.black]
line-length = 100
preview = true

[tool.isort]
atomic = true
profile = "black"
skip = [".venv"]

[tool.poetry]
name = "lc-vdb"
version = "0.1.0"
description = ""
authors = ["Juan Pablo Gonzalez <jpgrivero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.1"
deeplake = "3.6.5"
openai = "0.27.8"
tiktoken = "^0.7.0"
selenium = "^4.21.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
