[tool.black]
line-length = 100
preview = true

[tool.isort]
atomic = true
profile = "black"
skip = [".venv"]

[tool.poetry]
name = "lc-vdb"
version = "0.1.0"
description = ""
authors = ["Juan Pablo Gonzalez <jpgrivero@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8.1"
deeplake = {extras = ["enterprise"], version = "^3.9.8"}
langchain = "^0.2.1"
openai = "^1.30.3"
python-dotenv = "^1.0.1"
langchain-community = "^0.2.1"
tiktoken = "^0.7.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.4.2"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
